Doc tests up to Chapter 22
Fix error in newest BWV113.8 also

--- a/documentation/source/about/what.ipynb
+++ b/documentation/source/about/what.ipynb
@@ -1,20 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# ignore this\n",
-    "%load_ext music21.ipython21"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -389,7 +375,10 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": [
+     "nbval-ignore-output"
+    ]
    },
    "outputs": [
     {
@@ -533,6 +522,7 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
