--- a/documentation/source/developerReference/devTest_timespans.ipynb
+++ b/documentation/source/developerReference/devTest_timespans.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "<TimespanTree {91} (0.0 to 24.0) <music21.stream.Score 0x109d164d0>>"
+       "<TimespanTree {91} (0.0 to 24.0) <music21.stream.Score luca/gloria.xml>>"
       ]
      },
      "execution_count": 4,
