--- a/documentation/source/developerReference/devTest_widgets.ipynb
+++ b/documentation/source/developerReference/devTest_widgets.ipynb
@@ -29,7 +29,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "266c65ee",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -56,7 +60,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "305a0cb0",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -83,7 +91,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "ff27d4b0",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -173,7 +185,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "7da0fb50",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -352,7 +368,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "65d42a19",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -390,7 +410,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "2043e94d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -410,17 +434,10 @@
    "source": [
     "a_w(10, 20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d4c4844",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
