--- a/documentation/source/developerReference/notebook_show_tests.ipynb
+++ b/documentation/source/developerReference/notebook_show_tests.ipynb
@@ -68,7 +68,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "46a58765-30d8-438f-929b-88299d9eec97",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -123,6 +127,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
