--- a/documentation/source/usersGuide/usersGuide_11_corpusSearching.ipynb
+++ b/documentation/source/usersGuide/usersGuide_11_corpusSearching.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "3189"
+       "3193"
       ]
      },
      "execution_count": 2,
@@ -191,9 +191,9 @@
      "text": [
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: local metadata cache: starting processing of paths: 0\n",
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /Users/cuthbert/music21temp/local.p.gz\n",
-      "bundles.py: WARNING: MetadataBundle Modification Time: 1660098613.9355426\n",
-      "bundles.py: WARNING: Skipped 0 sources already in cache.\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.041 md items: 0\n",
+      "metadata.bundles: WARNING: MetadataBundle Modification Time: 1686436276.496933\n",
+      "metadata.bundles: WARNING: Skipped 0 sources already in cache.\n",
+      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.024 md items: 0\n",
       "\n",
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /Users/cuthbert/music21temp/local.p.gz\n"
      ]
@@ -234,7 +234,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.bundles.MetadataBundle {2163 entries}>"
+       "<music21.metadata.bundles.MetadataBundle {2164 entries}>"
       ]
      },
      "execution_count": 7,
@@ -301,7 +301,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.bundles.MetadataBundle {2163 entries}>"
+       "<music21.metadata.bundles.MetadataBundle {2164 entries}>"
       ]
      },
      "execution_count": 9,
@@ -485,6 +485,7 @@
       "conductor\n",
       "conformsTo\n",
       "copyright\n",
+      "corpusFilePath\n",
       "countryOfComposition\n",
       "date\n",
       "dateAccepted\n",
@@ -664,7 +665,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.bundles.MetadataBundle {212 entries}>"
+       "<music21.metadata.bundles.MetadataBundle {213 entries}>"
       ]
      },
      "execution_count": 17,
@@ -761,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
