--- a/documentation/source/usersGuide/usersGuide_36_clientWeakref.ipynb
+++ b/documentation/source/usersGuide/usersGuide_36_clientWeakref.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# User's Guide, Chapter 36: Clients and Weak References\n",
     "\n",
+    "**(This Chapter is a work in progress)**\n",
+    "\n",
     "This chapter explains some of the underlying aspects of `music21`'s functioning that may be helpful for someone doing advanced work in understanding how the system works."
    ]
   },
@@ -70,34 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But actually `.client` is not an attribute or reference at all, but a property: a small method that is run invisibily without needing `()` marks that converts a weakref into a normal object. The actual weakref is stored at `._client`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<weakref at 0x107967318; to 'Note' at 0x10798b630>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n.duration._client"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have already seen the use of weak references to store clients in the Derivation method:"
+    "Or similarly for a derivation:"
    ]
   },
   {
@@ -108,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.note.Note F##>"
+       "<music21.note.Note A#>"
       ]
      },
      "execution_count": 3,
@@ -117,7 +92,28 @@
     }
    ],
    "source": [
-    "n.derivation.client"
+    "n2 = n.transpose('m3')\n",
+    "n2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<music21.note.Note F##>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2.derivation.origin"
    ]
   },
   {
@@ -128,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "<music21.note.Note A#>"
       ]
      },
      "execution_count": 4,
@@ -137,14 +133,75 @@
     }
    ],
    "source": [
-    "n.derivation.client is n"
+    "n2.derivation.client"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But actually `.client` is not an attribute or reference at all, but a property: a small method that is run invisibily without needing `()` marks that converts a weakref into a normal object. The actual weakref is stored at `._client`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<weakref at 0x115623790; to 'Note' at 0x1155f0dd0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2.derivation._client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n2.derivation.client is n2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> _Note:_ Any feature beginning with an underscore may change in `music21` without notice -- these are the things that the developers reserve for changing their own implementation methods at any time.  In fact, in an earlier version of this guide (and of `music21`), `.duration.client` had a private `.duration._client` feature which was a weak reference.  As Python has become more sophisticated with its \"garbage collection\", this hiding of client became unnecessary, so it was changed without an announcement.  For reasons to be explained below, `.derivation._client` is unlikely to go away anytime soon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
