--- a/documentation/source/usersGuide/usersGuide_41_figuredBass.ipynb
+++ b/documentation/source/usersGuide/usersGuide_41_figuredBass.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**(This Chapter is a work in progress)**\n",
+    "\n",
     "Let's start with a new piece, the first movement of a Trio sonata by Corelli."
    ]
   },
@@ -92,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
