docfix, lint, mypy

--- a/documentation/source/developerReference/notebook_show_tests.ipynb
+++ b/documentation/source/developerReference/notebook_show_tests.ipynb
@@ -14,7 +14,12 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d85400ee-0b2f-4ee3-a07f-6385b636cab9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
