--- a/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
+++ b/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
@@ -371,7 +371,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "data": {
