Move incomplete docs to testsAndInProgress
Clean up the User's Guide so that docs in progress are separate from released docs.

--- a/documentation/source/testsAndInProgress/devTest_plots_no_m21.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_plots_no_m21.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "05224df5",
+   "metadata": {},
+   "source": [
+    "# Testing Plotting w/o Music21\n",
+    "\n",
+    "These are tests to see what difference importing music21 does to the current \n",
+    "Jupyter/Matplotlib/numpy installation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "bb073892",
