--- a/documentation/source/testsAndInProgress/devTest_plots_w_m21.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_plots_w_m21.ipynb
@@ -5,8 +5,12 @@
    "id": "c03fef0d",
    "metadata": {},
    "source": [
-    "`Music21` manipulates the environment somewhat when loading matplotlib.  Perhaps no longer needed after \n",
-    "https://github.com/ipython/ipython/issues/12190"
+    "# Testing Plotting with Music21\n",
+    "\n",
+    "`Music21` used to manipulate the environment somewhat when loading matplotlib in Jupyter.  This seems to no longer be needed after: \n",
+    "https://github.com/ipython/ipython/issues/12190\n",
+    "\n",
+    "But some issues still arise with double plotting of graphs and returning Axes, so this file helps test them."
    ]
   },
   {
