--- a/documentation/source/testsAndInProgress/notebook_show_tests.ipynb
+++ b/documentation/source/testsAndInProgress/notebook_show_tests.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ee420164",
+   "metadata": {},
+   "source": [
+    "# Tests of .show() of music21 within Notebooks\n",
+    "\n",
+    "`Music21` checks to see if its environment is a Notebook (Jupyter/Colab/JupyterLab) \n",
+    "and uses different file formats for show() w/ MuseScore and MIDI (w/ music21j/midicube)\n",
+    "\n",
+    "This file contains tests that currently work."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e083b92c-7e2f-4470-b40d-cbd9a5b9ce94",
