--- a/documentation/source/usersGuide/usersGuide_32_articulations.ipynb
+++ b/documentation/source/usersGuide/usersGuide_32_articulations.ipynb
@@ -576,7 +576,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a short chapter, because once you know a bit about articulations, you'll just want to spend your time in the :ref:`moduleArticulations` module reference to learn more about them.  But there is a related concept called \"expressions\" that we will learn about in :ref:`Chapter 33: Expressions and Ornaments<usersGuide_33_expressions>`"
+    "This is a short chapter, because once you know a bit about articulations, you'll just want to spend your time in the :ref:`moduleArticulations` module reference to learn more about them.  But there is a related concept called \"expressions\" that we will learn about in `Chapter 33: Expressions and Ornaments` when it is completed.\n",
+    "\n",
+    "For now, the next completed chapter is :ref:`Chapter 44: Advanced Graphing (Axes, Plots, and Graphs) <usersGuide_44_advancedGraphing>`."
    ]
   }
  ],
@@ -596,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
