--- a/documentation/source/usersGuide/usersGuide_44_advancedGraphing.ipynb
+++ b/documentation/source/usersGuide/usersGuide_44_advancedGraphing.ipynb
@@ -1597,7 +1597,9 @@
     "collapsed": true
    },
    "source": [
-    "Enough with graphs...who knows what the next chapter will be?  For now, go ahead to :ref:`Chapter 53, Advanced Corpus and Metadata Searching <usersGuide_53_advancedCorpus>`"
+    "Enough with graphs!\n",
+    "\n",
+    "The next completed chapter is :ref:`Chapter 53, Advanced Corpus and Metadata Searching <usersGuide_53_advancedCorpus>`"
    ]
   }
  ],
