--- a/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
+++ b/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
@@ -787,6 +787,15 @@
    "source": [
     "localBundle.clear()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With local corpora you will be able to develop your own collections of pieces to analyze, work on a new self-contained project with, and index and search through them.\n",
+    "\n",
+    "But what if some of your music is in a file format that `music21` does not yet support?  Maybe it's time to write your own converter or notation format.  To learn how to do that, go to the next chapter, :ref:`Chapter 54: Extending Converter with New Formats <usersGuide_54_extendingConverter>`."
+   ]
   }
  ],
  "metadata": {
