--- a/documentation/source/usersGuide/usersGuide_54_extendingConverter.ipynb
+++ b/documentation/source/usersGuide/usersGuide_54_extendingConverter.ipynb
@@ -304,6 +304,13 @@
    "source": [
     "A demonstration of the singleBeat type (simplified a bit), but including a `.write()` call, can be found in the `converter` directory under the filename `qmConverter.py`."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that you have a system that can take in just about any format you can write a converter for, it's time to get back to understanding the music that you have available to you.  Meter is a concept that is far deeper than simple concepts like 4/4 or 6/8 would let on.  To learn more about how to do metrical analysis, turn to :ref:`Chapter 55: Advanced Meter Topics <usersGuide_55_advancedMeter>`"
+   ]
   }
  ],
  "metadata": {
@@ -324,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
