--- a/documentation/source/usersGuide/usersGuide_58_sitesContext.ipynb
+++ b/documentation/source/usersGuide/usersGuide_58_sitesContext.ipynb
@@ -973,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was a pretty dense chapter, I know, and it barely scratches the surface of the complexities of the Context system, so we'll move to something lighter if even more distant, and look at Medieval and Renaissance extensions in `music21`."
+    "This was a pretty dense chapter, I know, and it barely scratches the surface of the complexities of the Context system, so we'll move to something lighter if even more distant, and look at Medieval and Renaissance extensions in `music21` -- as soon as that chapter is completed.  Until then, jump ahead to :ref:`Chapter 61: TimespanTrees and Verticalities <usersGuide_61_trees>`."
    ]
   }
  ],
@@ -993,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
