--- a/documentation/source/usersGuide/usersGuide_61_trees.ipynb
+++ b/documentation/source/usersGuide/usersGuide_61_trees.ipynb
@@ -1589,13 +1589,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will return to using TimespanTrees to make reductions in the next chapter (to be written)."
+    "We will return to using TimespanTrees to make reductions in the next chapter (to be written).\n",
+    "\n",
+    "For now, you've reached the end of the User's Guide.\n",
+    "\n",
+    "More information on just about every music21 concept can be found in the :ref:`Module Reference <moduleReference>`.  Find a module you're interested in and enjoy a deeper dive!"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1609,7 +1613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
