--- a/documentation/source/testsAndInProgress/devTest_widgets.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_widgets.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "de5a3de7",
+   "metadata": {},
+   "source": [
+    "# Testing ipywidgets and Music21\n",
+    "\n",
+    "These are tests of widgets within Music21"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "19b1f3bc",
