--- a/documentation/source/testsAndInProgress/usersGuide_56_searching2.ipynb
+++ b/documentation/source/testsAndInProgress/usersGuide_56_searching2.ipynb
@@ -47,7 +47,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -61,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
