--- a/documentation/source/usersGuide/usersGuide_55_advancedMeter.ipynb
+++ b/documentation/source/usersGuide/usersGuide_55_advancedMeter.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ignore this\n",
-    "%load_ext music21.ipython21"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1374,7 +1364,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1423,12 +1415,19 @@
    "source": [
     "This is probably more depth to the concept of meter than anyone would ever want!  But hope that it has whetted your appetite for jucier concepts still to come!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next chapters are not yet complete, so let's jump head to :ref:`Chapter 58: Understanding Sites and Contexts <usersGuide_58_sitesContext>`"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1442,7 +1441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
