--- a/documentation/source/usersGuide/usersGuide_99_Table_of_Contents.ipynb
+++ b/documentation/source/usersGuide/usersGuide_99_Table_of_Contents.ipynb
@@ -48,56 +48,56 @@
     "30. :ref:`Examples 3 <usersGuide_30_examples3>`\n",
     "31.\t:ref:`Clefs, Ties, and Beams <usersGuide_31_clefs>`\n",
     "32. :ref:`Articulations <usersGuide_32_articulations>`\n",
-    "33. :ref:`Expressions and Ornaments <usersGuide_33_expressions>`\n",
-    "34. Instruments\n",
-    "35.\tChord Symbols\n",
-    "36.\tBars and Repeats\n",
-    "37. :ref:`Clients and Weakreferences <usersGuide_36_clientWeakref>`\n",
-    "38.\tLayout\n",
-    "39.\tDynamics and Volume\n",
-    "40. Examples 4\n",
-    "41.\t:ref:`Figured Bass <usersGuide_41_figuredBass>`\n",
-    "42.\tScales\n",
-    "43. :ref:`Searching in and Among Scores <usersGuide_43_searching1>`\n",
+    "33. Expressions and Ornaments (incomplete)\n",
+    "34. Instruments (incomplete)\n",
+    "35.\tChord Symbols (incomplete)\n",
+    "36.\tBars and Repeats (incomplete)\n",
+    "37. Clients and Weak references (incomplete)\n",
+    "38.\tLayout  (incomplete)\n",
+    "39.\tDynamics and Volume (incomplete)\n",
+    "40. Examples 4  (incomplete)\n",
+    "41.\tFigured Bass (incomplete)\n",
+    "42.\tScales (incomplete)\n",
+    "43. Searching in and Among Scores (incomplete)\n",
     "44. :ref:`Advanced Graphing (Axes, Plots, and Graphs) <usersGuide_44_advancedGraphing>`\n",
-    "45. Composing algorithmic music\n",
-    "46. :ref:`Streams 3: Manipulation, inPlace, and deepcopy <usersGuide_46_streams3>`\n",
-    "47. Voice leading\n",
-    "48. Feature Extraction (1)\n",
-    "49. Tempo\n",
-    "50. Examples 5\n",
-    "51. Basic Analysis Tools\n",
-    "52. Metadata Objects\n",
+    "45. Composing algorithmic music (incomplete)\n",
+    "46. Streams 3: Manipulation, inPlace, and deepcopy\n",
+    "47. Voice leading (incomplete)\n",
+    "48. Feature Extraction (1) (incomplete)\n",
+    "49. Tempo (incomplete)\n",
+    "50. Examples 5 (incomplete)\n",
+    "51. Basic Analysis Tools (incomplete)\n",
+    "52. Metadata Objects (incomplete)\n",
     "53.\t:ref:`Advanced Corpus and Metadata Searching <usersGuide_53_advancedCorpus>`\n",
     "54. :ref:`Extending Converter with New Formats <usersGuide_54_extendingConverter>`\n",
     "55. :ref:`Advanced Meter topics <usersGuide_55_advancedMeter>`\n",
-    "56. :ref:`Segmented and Approximate Searching <usersGuide_56_searching2>`\n",
-    "57. :ref:`Speeding up music21 <usersGuide_57_speed>`\n",
+    "56. Segmented and Approximate Searching  (incomplete)\n",
+    "57. Speeding up music21 (incomplete)\n",
     "58. :ref:`Understanding Sites and Contexts <usersGuide_58_sitesContext>`\n",
-    "59. Medieval and Renaissance extensions\n",
-    "60. Examples 6\n",
+    "59. Medieval and Renaissance extensions (incomplete)\n",
+    "60. Examples 6 (incomplete)\n",
     "61. :ref:`TimespanTrees and Verticalities <usersGuide_61_trees>`\n",
-    "62. Performing Reductions with Trees\n",
+    "62. Performing Reductions with Trees (incomplete)\n",
     "\n",
     "To be numbered later:\n",
     "\n",
-    "1. Style\n",
-    "1. Piano Scores\n",
-    "1. FreezeThaw\n",
-    "1. Spanners 2\n",
-    "1. Ossias, Variants, and musicDiff\n",
-    "1. Audio searching\n",
-    "1. Species counterpoint\n",
-    "1. Post tonal tools (2): Advanced and Xenakis Sieves\n",
-    "1. Feature Extraction (2)\n",
-    "1. MIDI -- advanced"
+    "1. Style (incomplete)\n",
+    "1. Piano Scores (incomplete)\n",
+    "1. FreezeThaw (incomplete)\n",
+    "1. Spanners 2 (incomplete)\n",
+    "1. Ossias, Variants, and musicDiff (incomplete)\n",
+    "1. Audio searching (incomplete)\n",
+    "1. Species counterpoint (incomplete)\n",
+    "1. Post tonal tools (2): Advanced and Xenakis Sieves (incomplete)\n",
+    "1. Feature Extraction (2) (incomplete)\n",
+    "1. MIDI -- advanced (incomplete)"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
