--- a/documentation/source/usersGuide/usersGuide_08_installingMusicXML.ipynb
+++ b/documentation/source/usersGuide/usersGuide_08_installingMusicXML.ipynb
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "url = 'http://kern.ccarh.org/cgi-bin/ksdata?l=cc/bach/cello&file=bwv1007-01.krn&f=xml'\n",
+    "url = 'https://kern.ccarh.org/cgi-bin/ksdata?l=cc/bach/cello&file=bwv1007-01.krn&f=xml'\n",
     "sAlt = converter.parse(url)\n",
     "sAlt.measures(1, 5).show() # show first 5 measures"
    ]
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sBach = converter.parse('http://kern.ccarh.org/cgi-bin/ksdata?' +\n",
+    "sBach = converter.parse('https://kern.ccarh.org/cgi-bin/ksdata?' +\n",
     "                        'l=users/craig/classical/bach/cello&file=bwv1007-01.krn&f=kern')"
    ]
   },
@@ -373,7 +373,7 @@
    "source": [
     "Over one hundred thousand Kern files can be found at the following URL.\n",
     "\n",
-    "http://kern.humdrum.org/"
+    "https://kern.humdrum.org/"
    ]
   },
   {
