Fix lint (and readme, thanks Greg!)

--- a/documentation/source/usersGuide/usersGuide_14_timeSignatures.ipynb
+++ b/documentation/source/usersGuide/usersGuide_14_timeSignatures.ipynb
@@ -913,7 +913,7 @@
    ],
    "source": [
     "for n in alto.recurse().notes:\n",
-    "    n.stemDirection = None\n",
+    "    n.stemDirection = 'unspecified'\n",
     "\n",
     "alto.show()"
    ]
