Fix documentation tests

--- a/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
+++ b/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
@@ -120,9 +120,9 @@
      "text": [
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: newCorpus metadata cache: starting processing of paths: 0\n",
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/local-newCorpus.p.gz\n",
-      "metadata.bundles: WARNING: MetadataBundle Modification Time: 1686508943.60752\n",
+      "metadata.bundles: WARNING: MetadataBundle Modification Time: 1730173618.922734\n",
       "metadata.bundles: WARNING: Skipped 0 sources already in cache.\n",
-      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.202 md items: 0\n",
+      "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: writing time: 0.035 md items: 0\n",
       "\n",
       "/Users/cuthbert/git/music21base/music21/corpus/corpora.py: WARNING: cache: filename: /var/folders/qg/klchy5t14bb2ty9pswk6c2bw0000gn/T/music21/local-newCorpus.p.gz\n"
      ]
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.RichMetadata object at 0x11804b950>"
+       "<music21.metadata.RichMetadata object at 0x10af31690>"
       ]
      },
      "execution_count": 10,
@@ -521,7 +521,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.bundles.MetadataBundle 'core': {15111 entries}>"
+       "<music21.metadata.bundles.MetadataBundle 'core': {15112 entries}>"
       ]
      },
      "execution_count": 16,
@@ -609,7 +609,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.bundles.MetadataBundle 'core': {15111 entries}>"
+       "<music21.metadata.bundles.MetadataBundle 'core': {15112 entries}>"
       ]
      },
      "execution_count": 20,
@@ -638,7 +638,7 @@
     {
      "data": {
       "text/plain": [
-       "<music21.metadata.bundles.MetadataBundle 'core': {15111 entries}>"
+       "<music21.metadata.bundles.MetadataBundle 'core': {15112 entries}>"
       ]
      },
      "execution_count": 21,
