update doctests, links, and build instructions

--- a/documentation/source/developerReference/developerGuidelines.ipynb
+++ b/documentation/source/developerReference/developerGuidelines.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "`Music21` welcomes contributions such as bug reports, new features, fixes, and\n",
     "documentation improvements. The\n",
-    "[project repository](http://www.github.com/cuthbertLab/music21) is hosted at GitHub."
+    "[project repository](https://github.com/cuthbertLab/music21) is hosted at GitHub."
    ],
    "metadata": {
     "collapsed": false
@@ -20,7 +20,7 @@
     "\n",
     "Get to know this before contributing:\n",
     "\n",
-    "[Module Documentation and User's Guide](https://web.mit.edu/music21/doc/index.html)\n",
+    "[Module Documentation and User's Guide](https://www.music21.org/music21docs/index.html)\n",
     "\n",
     "[Mailing List](https://groups.google.com/forum/#!forum/music21list)\n",
     "\n",
@@ -186,7 +186,7 @@
     "    - `Music21` was originally designed without this principle in mind, so you will find\n",
     "      parts of the system that do not follow LSP and for backwards compatibility never will.\n",
     "      I (Myke) have personally apologized to Barbara Liskov for my past ignorance.\n",
-    "  - Use [Sphinx formatting](https://web.mit.edu/music21/doc/developerReference/documenting.html#documenting-modules-and-classes)\n",
+    "  - Use [Sphinx formatting](https://www.music21.org/music21docs/developerReference/documenting.html#documenting-modules-and-classes)\n",
     "      to link to classes and methods in docstrings\n",
     "  - Prefer methods that by default do not alter the object passed in and instead return a new one.\n",
     "      It is permitted and encouraged to have an `inPlace: bool = False` argument that allows for\n",
@@ -216,7 +216,7 @@
     "\n",
     "We write doctests and unit tests, and we strive for the total\n",
     "test coverage of the project to increase with every pull request. See the\n",
-    "[developer docs](https://web.mit.edu/music21/doc/developerReference/index.html)\n",
+    "[developer docs](https://www.music21.org/music21docs/developerReference/index.html)\n",
     "to dig in to specific topics like adjusting doctests to prevent\n",
     "actions we don't want executed when running the general test suite (such as opening\n",
     "browser windows or playing music).\n",
