--- a/documentation/source/usersGuide/usersGuide_44_advancedGraphing.ipynb
+++ b/documentation/source/usersGuide/usersGuide_44_advancedGraphing.ipynb
@@ -1122,7 +1122,7 @@
     "\n",
     "* 'alpha' sets transparency, from 0 (transparent) to 1 (opaque).\n",
     "* 'color' gives a color to the data point -- specified like \"red\" or \"green\" or an HTML color like \"#ff0044\"\n",
-    "* 'marker' on a scatter plot will choose a shape for a marker as in [this diagram](https://matplotlib.org/api/markers_api.html)\n",
+    "* 'marker' on a scatter plot will choose a shape for a marker as in [this diagram](https://matplotlib.org/stable/api/markers_api.html)\n",
     "* 'markersize' gives the size of the marker -- notice that we're using matplotlib names, so the \"s\" of size is lowercased (in `music21` almost everything is camelCase)\n",
     "\n",
     "Let's make a new axis class which returns the frequency of each pitch but also changes its marker according to whether it's in a certain key or not:"
@@ -1328,7 +1328,7 @@
    "source": [
     "## Graph Primitives\n",
     "\n",
-    "Untill now, all our our examples have used Plot classes taken from :ref:`moduleGraphPlot` because they were acting on streams to get their data.  If you wanted to make graphs of data not coming from a Stream you could use matplotlib directly -- they have a great tutorial on [using their `pyplot` interface](https://matplotlib.org/users/pyplot_tutorial.html), for instance.  Or if you want to get some of the advantages of the `music21` Plot types without going all the way into matplotlib, there are Graph primitives in the :ref:`moduleGraphPrimitives` module.  Here are some examples of how those work:"
+    "Untill now, all our our examples have used Plot classes taken from :ref:`moduleGraphPlot` because they were acting on streams to get their data.  If you wanted to make graphs of data not coming from a Stream you could use matplotlib directly -- they have a great tutorial on [using their `pyplot` interface]( https://matplotlib.org/2.0.2/users/pyplot_tutorial.html), for instance.  Or if you want to get some of the advantages of the `music21` Plot types without going all the way into matplotlib, there are Graph primitives in the :ref:`moduleGraphPrimitives` module.  Here are some examples of how those work:"
    ]
   },
   {
