methods in backticks

--- a/documentation/source/usersGuide/usersGuide_07_chords.ipynb
+++ b/documentation/source/usersGuide/usersGuide_07_chords.ipynb
@@ -526,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can find the third and fifth of the `Chord` with .third and .fifth.  Note that these properties do not have `()` after them.  This was a mistake in how we created `music21` and hopefully this will all be fixed and consistent soon:"
+    "You can find the third and fifth of the `Chord` with `.third` and `.fifth`.  Note that these properties do not have `()` after them.  This was a mistake in how we created `music21` and hopefully this will all be fixed and consistent soon:"
    ]
   },
   {
