fixed spelling and other syntax

--- a/documentation/source/usersGuide/usersGuide_08_installingMusicXML.ipynb
+++ b/documentation/source/usersGuide/usersGuide_08_installingMusicXML.ipynb
@@ -312,7 +312,7 @@
     "\n",
     "Some of the available formats will be listed below; the most important ones for now are the output formats (since music21 will figure out inputs automatically).  They are `braille`, `lilypond`, `midi`, `musicxml`, `scala`, `text`, and `vexflow`.\n",
     "\n",
-    "Some formats have sub-formats, for instance both `musicxml` and `lilypond` have a `.png` subformat which converts directly to a `.png` file.  To use that, call `.show(\"musicxml.png\")`.\n",
+    "Some formats have sub-formats; for instance, both `musicxml` and `lilypond` have a `.png` subformat which converts directly to a `.png` file.  To use that, call `.show(\"musicxml.png\")`.\n",
     "\n",
     "Some formats have abbreviations also, so `musicxml` is also `xml`, `lilypond` is `lily`, and (for ease of typing), `text` is `t`."
    ]
@@ -778,7 +778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MIDI input and output is handled in the same was other formats. Simply call the\n",
+    "MIDI input and output is handled in the same way as other formats. Simply call the\n",
     ":func:`music21.converter.parse` function on the desired file path or URL.\n",
     "\n",
     "Remember (or learn if you haven't yet), that MIDI has no information about enharmonic spelling (C# and Db are the same), and that detecting the lengths of notes can be difficult.  `Music21` does very well with MIDI files that were created in notation software or sequencing software, but has a harder time handling MIDI files created by recording live input.  For those files, we suggest converting the MIDI files in software such as Finale that has a more sophisticated MIDI to MusicXML conversion routine."
