--- a/documentation/source/usersGuide/usersGuide_11_corpusSearching.ipynb
+++ b/documentation/source/usersGuide/usersGuide_11_corpusSearching.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "This user's guide will cover more about the corpus's basic features.  This\n",
     "chapter focuses on music21's tools for extracting useful metadata - titles,\n",
-    "locations, composers names, the key signatures used in each piece, total\n",
+    "locations, composers' names, the key signatures used in each piece, total\n",
     "durations, ambitus (range) and so forth.\n",
     "\n",
     "This metadata is collected in *metadata bundles* for each corpus. The *corpus*\n",
