--- a/documentation/source/usersGuide/usersGuide_15_key.ipynb
+++ b/documentation/source/usersGuide/usersGuide_15_key.ipynb
@@ -1261,7 +1261,7 @@
     "collapsed": true
    },
    "source": [
-    "So, how does it know what the key is?  The key analysis routines are a variation of the famous (well at least in the small world of computational music theory) algorithm developed by Carol Krumhansl and Mark A. Schmuckler called probe-tone key finding.  The distribution of pitches used in the piece are compared to sample distributions of pitches for major and minor keys and the closest matches are reported.  (see http://rnhart.net/articles/key-finding/ for more details).  `Music21` can be asked to use the sample distributions of several authors, including Krumhansl and Schmuckler's original weights:"
+    "So, how does it know what the key is?  The key analysis routines are a variation of the famous (well at least in the small world of computational music theory) algorithm developed by Carol Krumhansl and Mark A. Schmuckler called probe-tone key finding.  The distribution of pitches used in the piece is compared to sample distributions of pitches for major and minor keys and the closest matches are reported.  (see http://rnhart.net/articles/key-finding/ for more details).  `Music21` can be asked to use the sample distributions of several authors, including Krumhansl and Schmuckler's original weights:"
    ]
   },
   {
