--- a/documentation/source/usersGuide/usersGuide_24_environment.ipynb
+++ b/documentation/source/usersGuide/usersGuide_24_environment.ipynb
@@ -20,7 +20,7 @@
     ":class:`~music21.environment.Environment` object provides lower-level access\n",
     "and control, as well as numerous utility methods for music21 modules. The\n",
     ":class:`~music21.environment.UserSettings` object is a convenience class for\n",
-    "users to quickly set and check settings, and is reccommended for general usage.\n",
+    "users to quickly set and check settings, and is recommended for general usage.\n",
     "For complete information on the Environment and UserSettings objects, see\n",
     ":mod:`~music21.environment`.\n",
     "\n",
@@ -102,7 +102,7 @@
     "Python dictionary-like syntax. For example, to set the Music21 scratch\n",
     "directory, the 'directoryScratch' key can be set to a file path of the user's\n",
     "choice. Changes are made immediately to the environment configuration file. To\n",
-    "see the current setting, the value can be accesed by key.\n",
+    "see the current setting, the value can be accessed by key.\n",
     "\n",
     "::\n",
     "\n",
