--- a/documentation/source/testsAndInProgress/devTest_widgets.ipynb
+++ b/documentation/source/testsAndInProgress/devTest_widgets.ipynb
@@ -124,9 +124,9 @@
    ],
    "source": [
     "@widgets.interact_manual(\n",
-    "    color=['blue', 'red', 'green'], lw=(1., 10.))\n",
-    "def plot(freq=1., color='blue', lw=2, grid=True):\n",
-    "    t = np.linspace(-1., +1., 1000)\n",
+    "    color=['blue', 'red', 'green'], lw=(1.0, 10.0))\n",
+    "def plot(freq=1.0, color='blue', lw=2, grid=True):\n",
+    "    t = np.linspace(-1.0, 1.0, 1000)\n",
     "    fig, ax = plt.subplots(1, 1, figsize=(8, 6))\n",
     "    ax.plot(t, np.sin(2 * np.pi * freq * t),\n",
     "            lw=lw, color=color)\n",
@@ -157,8 +157,8 @@
    ],
    "source": [
     "freq_slider = widgets.FloatSlider(\n",
-    "    value=2.,\n",
-    "    min=1.,\n",
+    "    value=2.0,\n",
+    "    min=1.0,\n",
     "    max=10.0,\n",
     "    step=0.1,\n",
     "    description='Frequency:',\n",
