Correct collaborator name

--- a/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
+++ b/documentation/source/usersGuide/usersGuide_53_advancedCorpus.ipynb
@@ -102,7 +102,7 @@
    "source": [
     "aNewLocalCorpus.addPath('~/Desktop')\n",
     "#_DOCS_SHOW aNewLocalCorpus.directoryPaths\n",
-    "print(\"('/Users/josiah/Desktop',)\") #_DOCS_HIDE"
+    "print(\"('/Users/j_wolf/Desktop',)\") #_DOCS_HIDE"
    ]
   },
   {
